--- a/.github/workflows/metrics-readme.yml
+++ b/.github/workflows/metrics-readme.yml
@@ -17,8 +17,13 @@ jobs:
           filename: README.md         # Output file
           markdown: TEMPLATE.md       # Template file
           config_output: markdown
+          config_timezone: Asia/Shanghai
           plugin_topics: yes
           plugin_topics_limit: 24
+          plugin_achievements: yes
+          plugin_achievements_limit: 5
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
           # ... other options
 #           isocalendar: yes
 #           languages: yes
